NetBSD Problem Report #50524

From www@NetBSD.org  Fri Dec 11 09:37:36 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 16928A6679
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 09:37:36 +0000 (UTC)
Message-Id: <20151211093735.39F80A6683@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 09:37:35 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/bebox/bebox/autoconf.c:165: suspicous comparison ?
X-Send-Pr-Version: www-1.0

>Number:         50524
>Category:       port-bebox
>Synopsis:       src/sys/arch/bebox/bebox/autoconf.c:165: suspicous comparison ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-bebox-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 09:40:00 +0000 2015
>Closed-Date:    Sun Dec 13 20:27:00 +0000 2015
>Last-Modified:  Sun Dec 13 20:27:00 +0000 2015
>Originator:     David Binderman
>Release:        c
>Organization:
>Environment:
>Description:
[src/sys/arch/bebox/bebox/autoconf.c:165]: (warning) Char literal compared with pointer 'p'. Did you intend to dereference it?

Source code is

    if (p != '\0')
        return;

Maybe 

    if (*p != '\0')
        return;

would be better code ?
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50524 CVS commit: src/sys/arch/bebox/bebox
Date: Sun, 13 Dec 2015 14:38:09 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 19:38:09 UTC 2015

 Modified Files:
 	src/sys/arch/bebox/bebox: autoconf.c

 Log Message:
 PR/50524: David Binderman: Fix incorrect test


 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.27 src/sys/arch/bebox/bebox/autoconf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:27:00 +0000
State-Changed-Why:
christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.