PR/50524: David Binderman: Fix incorrect test